--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "isolatedModules": true,
     "paths": {
       "@components": ["src/components"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@layout": ["src/layout"],
+      "@layout/*": ["src/layout/*"]
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
